--- a/New Rocket Patrol Mods/index.html
+++ b/New Rocket Patrol Mods/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket Patrol</title>
+    <title>Bandit Buster</title>
     <style>
         body {
-            background-color: beige;
+            background-color: rgb(184, 150, 59);
         }
     </style>
 </head>
